cmake_minimum_required(VERSION 3.20)
project(Data-Structure)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_STANDARD 17)
add_executable(7077 10/Exp.3-4/7077.cpp)
add_executable(7079 10/Exp.3-4/7079.cpp)
add_executable(7043 10/Exp.5-6/7043.cpp)
add_executable(7039 10/Exp.5-6/7039.cpp)
add_executable(7040 10/Exp.5-6/7040.cpp)
add_executable(7042 10/Exp.5-6/7042.cpp)
add_executable(7041 10/Exp.5-6/7041.cpp)
add_executable(7083 10/Exp.7/7083.cpp)
add_executable(7050 10/Exp.7/7050.cpp)